name: wx-experiments
version: 0.1
synopsis: Messing around with wxHaskell
author: Richard Lewis
license: GPL
build-type: Simple
cabal-version: >= 1.10

executable wxtest
  build-depends: base
               , text
               , wx
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -Wall
  default-language: Haskell2010
